[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = "=0.20.0"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["aws_lc_rs"] }
chrono = "0.4.42"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.9.2"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.20"

[dev-dependencies]
fake = "=4.4.0"
rand = "0.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "cookies"] }

# validator - provides common validation functions for emails, URLs, and more!
# fake - an easy to use library for generating fake data like name, number, address, lorem, dates, etc. This is useful for unit tests!
# rand -  provides random number generation capabilities. Used here to create seeded RNGs for deterministic test data generation with fake.
# quickcheck - provides a way to do property-based testing using randomly generated input. Property-based testing is a testing approach where you define properties (invariants, rules, or behaviors) that should always hold true for your code. The testing framework then automatically generates a wide range of inputs and checks if your code maintains those properties for all generated cases. This is useful for unit tests!
# quickcheck_macros - provides a convenient quickcheck! macro.
